Add hero image and slogan

--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
             </a>
         </div>
     </header>
-    <section>
-        <div id="react-container"></div>
+    <section class = "slogan">
+        <img id="hero-img" src="./images/logo.png">
+        <p id="hero-text"></p>
     </section>
+    <!-- <section>
+        <div id="react-container"></div>
+    </section> -->
 </body>
 
 </html>
 <script type="text/javascript" src="./js/nav.js"></script>
+<script type="text/javascript" src="./js/animate.js"></script>
 <script type="text/javascript" src="./dist/bundle.js"></script>
