--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 </head>
 
 <body>
-    <header>
-        <div class="topnav" id="myTopnav">
-            <a href="" class="menu-active">Sticky Board</a>
-            <a href="javascript:void(0);">Login</a>
-            <a href="javascript:void(0);">Sign up</a>
-            <a href="javascript:void(0);">About us</a>
-            <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
-                <i class="fa fa-bars"></i>
-            </a>
-        </div>
-    </header>
-    <section class = "slogan">
-        <img id="hero-img" src="./images/logo.png">
-        <p id="hero-text"></p>
-    </section>
+    <div class="my-wrapper">
+        <header>
+            <div class="topnav" id="myTopnav">
+                <a href="" class="menu-active">Sticky Board</a>
+                <a href="javascript:void(0);">Login</a>
+                <a href="javascript:void(0);">Sign up</a>
+                <a href="javascript:void(0);">About us</a>
+                <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </header>
+        <section class="my-content">
+            <div class="hero-img-div">
+                <img id="hero-img" src="./images/logo.png">
+            </div>
+            <div class="hero-slogan">
+                <p id="hero-text"></p>
+            </div>
+        </section>
+        <footer>
+            Copyright NCKU Web Design. All Rights Reserved.
+        </footer>
+    </div>
+
     <!-- <section>
         <div id="react-container"></div>
     </section> -->
