--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="utf-8">
     <title>Sticky Board</title>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/jQuery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
-    <link href="./css/bootstrap.min.css" rel="stylesheet"></link>
     <link rel="stylesheet" href="./css/nav.css"></link>
-    <link rel="stylesheet" href="./css/style.css"></link>
+    <link rel="stylesheet" href="./css/grid.css"></link>
+    <link rel="stylesheet" href="./css/home.css"></link>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <a href="" class="menu-active">Sticky Board</a>
                 <a href="javascript:void(0);">Login</a>
                 <a href="javascript:void(0);">Sign up</a>
-                <a href="javascript:void(0);">About us</a>
+                <a href="about.html">About us</a>
                 <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
                     <i class="fa fa-bars"></i>
                 </a>
