--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         <header>
             <div class="topnav" id="myTopnav">
                 <a href="index.html">Sticky Board</a>
-                <a href="javascript:void(0);">Login</a>
-                <a href="javascript:void(0);">Sign up</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign up</a>
                 <a href="about.html" class="menu-active">About us</a>
                 <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
                     <i class="fa fa-bars"></i>
