--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta charset="utf-8">
     <title>Sticky Board</title>
-    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./css/nav.css"></link>
@@ -16,9 +15,9 @@
     <div class="my-wrapper">
         <header>
             <div class="topnav" id="myTopnav">
-                <a href="" class="menu-active">Sticky Board</a>
-                <a href="javascript:void(0);">Login</a>
-                <a href="javascript:void(0);">Sign up</a>
+                <a href="index.html" class="menu-active">Sticky Board</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign up</a>
                 <a href="about.html">About us</a>
                 <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
                     <i class="fa fa-bars"></i>
