--- a/signup.html
+++ b/signup.html
@@ -17,8 +17,8 @@
         <header>
             <div class="topnav" id="myTopnav">
                 <a href="index.html">Sticky Board</a>
-                <a href="login.html" class="menu-active">Login</a>
-                <a href="signup.html">Sign up</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html" class="menu-active">Sign up</a>
                 <a href="about.html">About us</a>
                 <a href="javascript:void(0);" class="icon" onclick="responsive_nav()">
                     <i class="fa fa-bars"></i>
@@ -28,22 +28,34 @@
         <section class="form-container">
             <div class="userauth-form">
                 <div class="form-title">
-                    <h1>Login</h1>
+                    <h1>Sign up</h1>
                 </div>
                 <form method="POST" action="/account/login/">
                     <input type='hidden' name='csrfmiddlewaretoken' value='jIPDRbdfZQLB5m0Qhd4p7b5we2M6yZeoiOm4mhIRecG19uK71qb1qZUBTG04pivc'
                     />
                     <div class="userauth-input">
                         <label for="id_username">Username:</label>
-                        <input type="text" name="username" id="id_username" maxlength="254" autofocus required />
+                        <input type="text" name="username" id="id_username" maxlength="100" required autofocus />
                     </div>
                     <div class="userauth-input">
-                        <label for="id_password">Password:</label>
-                        <input type="password" name="password" id="id_password" required />
+                        <label for="id_email">Email:</label>
+                        <input type="email" name="email" id="id_email" required />
+                    </div>
+                    <div class="userauth-input">
+                        <label for="id_password1">Password:</label>
+                        <input type="text" name="password1" id="id_password1" maxlength="100" required />
+                    </div>
+                    <div class="userauth-input">
+                        <label for="id_password2">Password(confirm):</label>
+                        <input type="text" name="password2" id="id_password2" maxlength="100" required />
+                    </div>
+                    <div class="userauth-input">
+                        <label for="id_test">測試:</label>
+                        <input type="text" name="test" id="id_test" maxlength="100" required />
                     </div>
                     <div class="userauth-submit">
                         <button type="submit" class="login-btn">
-                            login
+                            Signup
                         </button>
                     </div>
                 </form>
@@ -54,6 +66,6 @@
         </footer>
     </div>
 </body>
+
 </html>
 <script type="text/javascript" src="./js/nav.js"></script>
-
